# alloPleth

./: .gitignore  .gitmodules  README.md  TODO.md  init.sh  main.py  metadataInfo.md  pyvenv.cfg  requirements.txt  runGUI.py  runPipeline.py  testRepack.py
data/: currentMetaData.xml  globalData.json
forExport/: spatialInstructions.csv  spatialInstructions.json
gui/: pipeline_gui.py
notebooks/: MetadataExample.pynb  main.ipynb  pipeline.ipynb  test1.pynb
processedData/: containsAudio.json  currentMetaData.xml  directSpeakerData.json  globalData.json  objectData.json
src/: analyzeMetadata.py  analyzeRender.py  checkAudioChannels.py  configCPP.py  convertJSON.py  createRender.py  createRenderInfo.py  createSpatialInstructions.py  extractMetadata.py  makeReport.py  packageForRender.py  parser.py  renderSpace.py  repackage.py  splitStems.py  visObjects.py
src/analyzeADM/: analyzeMetadata.py  checkAudioChannels.py  extractMetadata.py  parser.py
src/packageADM/: createRenderInfo.py  packageForRender.py  splitStems.py
utils/: deleteData.py  getExamples.py
vbapRender/: CMakeLists.txt  allosphere_layout.json
vbapRender/src/: JSONLoader.cpp  JSONLoader.hpp  LayoutLoader.cpp  LayoutLoader.hpp  VBAPRenderer.cpp  VBAPRenderer.cpp.backup  VBAPRenderer.hpp  WavUtils.cpp  WavUtils.hpp  main.cpp
